--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Madvig, J. N. (Johan Nikolai), 1804-1886'
 - !lcc 'DL'
 - !lcsh 'Denmark -- Politics and government -- 19th century'
+- GITenberg
 title: Livserindringer
 url: http://www.gutenberg.org/ebooks/44967
